Added final data additions to nfl_stadiums.csv and re-ran the code

--- a/NFL Betting Analysis/betting_analysis.ipynb
+++ b/NFL Betting Analysis/betting_analysis.ipynb
@@ -1072,8 +1072,8 @@
        "      <td>285 Dodge Street, Buffalo, NY 14208</td>\n",
        "      <td>NaN</td>\n",
        "      <td>cold</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>49,206</td>\n",
+       "      <td>Grass</td>\n",
        "      <td>...</td>\n",
        "      <td>200</td>\n",
        "      <td>NaN</td>\n",
@@ -1096,8 +1096,8 @@
        "      <td>Wembley, London HA9 0WS, United Kingdom</td>\n",
        "      <td>NaN</td>\n",
        "      <td>moderate</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>90,000</td>\n",
+       "      <td>Grass</td>\n",
        "      <td>...</td>\n",
        "      <td>62</td>\n",
        "      <td>NaN</td>\n",
@@ -1120,8 +1120,8 @@
        "      <td>1060 West Addison Street, Chicago, IL 60613</td>\n",
        "      <td>NaN</td>\n",
        "      <td>cold</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>41,649</td>\n",
+       "      <td>Grass</td>\n",
        "      <td>...</td>\n",
        "      <td>183</td>\n",
        "      <td>NaN</td>\n",
@@ -1144,7 +1144,7 @@
        "      <td>276 Derby Ave, West Haven, CT 06516</td>\n",
        "      <td>NaN</td>\n",
        "      <td>cold</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>64,246</td>\n",
        "      <td>Grass</td>\n",
        "      <td>...</td>\n",
        "      <td>13</td>\n",
@@ -1168,8 +1168,8 @@
        "      <td>1 E 161 St, Bronx, NY 10451</td>\n",
        "      <td>NaN</td>\n",
        "      <td>cold</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>54,251</td>\n",
+       "      <td>Grass</td>\n",
        "      <td>...</td>\n",
        "      <td>7</td>\n",
        "      <td>NaN</td>\n",
@@ -1224,11 +1224,11 @@
        "3                         NaN  moderate           75,024              Grass   \n",
        "4                         NaN      warm           67,814              Grass   \n",
        "...                       ...       ...              ...                ...   \n",
-       "127                       NaN      cold              NaN                NaN   \n",
-       "128                       NaN  moderate              NaN                NaN   \n",
-       "129                       NaN      cold              NaN                NaN   \n",
-       "130                       NaN      cold              NaN              Grass   \n",
-       "131                       NaN      cold              NaN                NaN   \n",
+       "127                       NaN      cold           49,206              Grass   \n",
+       "128                       NaN  moderate           90,000              Grass   \n",
+       "129                       NaN      cold           41,649              Grass   \n",
+       "130                       NaN      cold           64,246              Grass   \n",
+       "131                       NaN      cold           54,251              Grass   \n",
        "\n",
        "       ... Elevation (ft) Stadium Location2            Team Name  \\\n",
        "Index  ...                                                         \n",
