took out 3 columns in the merged data set

--- a/NFL Betting Analysis/betting_analysis.ipynb
+++ b/NFL Betting Analysis/betting_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "a8ddd80a-2e41-4bdf-ace7-dec3c484bb31",
    "metadata": {
     "scrolled": true
@@ -224,7 +224,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "da146a25",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "30bf89f7",
    "metadata": {},
    "outputs": [
@@ -505,7 +505,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "2cd1e28c",
    "metadata": {},
    "outputs": [
@@ -792,7 +792,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "a7f19b22",
    "metadata": {},
    "outputs": [
@@ -818,26 +818,24 @@
      "data": {
       "text/plain": [
        "Index(['Stadium Name', 'Stadium Location', 'Year Opened', 'Year Closed',\n",
-       "       'Stadium Type', 'Address', 'Weather Station Zipcode', 'Climate',\n",
-       "       'Stadium Capacity', 'Field Surface Type', 'Weather Station',\n",
-       "       'Weather Station Name', 'Latitude', 'Longitude', 'Dome Angle',\n",
+       "       'Stadium Type', 'Address', 'Climate', 'Stadium Capacity',\n",
+       "       'Field Surface Type', 'Latitude', 'Longitude', 'Dome Angle',\n",
        "       'Elevation (ft)', 'Stadium Location2', 'Team Name', 'Team Short Name',\n",
        "       'Team ID', 'Preferred ID', 'Conference (post 2002)',\n",
        "       'Division (post 2002)', 'Divison (pre 2002)', 'Divison (pre 2002).1'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Dropping columns that we do not need \n",
-    "renamed_team_stadium_merged.drop(['Weather Station Zipcode', 'Weather Station', 'Weather Station Name'], axis=1)\n",
-    "\n",
-    "\n",
-    "\n",
+    "renamed_team_stadium_merged = renamed_team_stadium_merged.drop('Weather Station Zipcode', axis = 1)\n",
+    "renamed_team_stadium_merged = renamed_team_stadium_merged.drop('Weather Station', axis = 1)\n",
+    "renamed_team_stadium_merged = renamed_team_stadium_merged.drop('Weather Station Name', axis = 1)\n",
     "\n",
     "#Verify the names of the remaining columns\n",
     "renamed_team_stadium_merged.columns"
@@ -845,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "816b8203",
    "metadata": {},
    "outputs": [
@@ -876,10 +874,10 @@
        "      <th>Year Closed</th>\n",
        "      <th>Stadium Type</th>\n",
        "      <th>Address</th>\n",
-       "      <th>Weather Station Zipcode</th>\n",
        "      <th>Climate</th>\n",
        "      <th>Stadium Capacity</th>\n",
        "      <th>Field Surface Type</th>\n",
+       "      <th>Latitude</th>\n",
        "      <th>...</th>\n",
        "      <th>Elevation (ft)</th>\n",
        "      <th>Stadium Location2</th>\n",
@@ -926,10 +924,10 @@
        "      <td>NaN</td>\n",
        "      <td>outdoor</td>\n",
        "      <td>100 Art Rooney Ave, Pittsburgh, PA 15212</td>\n",
-       "      <td>15212</td>\n",
        "      <td>cold</td>\n",
        "      <td>65,500</td>\n",
        "      <td>Grass</td>\n",
+       "      <td>40.484600</td>\n",
        "      <td>...</td>\n",
        "      <td>367</td>\n",
        "      <td>Pittsburgh, PA</td>\n",
@@ -950,10 +948,10 @@
        "      <td>NaN</td>\n",
        "      <td>indoor</td>\n",
        "      <td>100 Montana St, San Antonio, TX 78203</td>\n",
-       "      <td>78203</td>\n",
        "      <td>indoor</td>\n",
        "      <td>72000</td>\n",
        "      <td>FieldTurf</td>\n",
+       "      <td>29.416944</td>\n",
        "      <td>...</td>\n",
        "      <td>202</td>\n",
        "      <td>NaN</td>\n",
@@ -974,10 +972,10 @@
        "      <td>NaN</td>\n",
        "      <td>indoor</td>\n",
        "      <td>3333 Al Davis Way, Las Vegas, NV 89118</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>indoor</td>\n",
        "      <td>65000</td>\n",
        "      <td>Grass</td>\n",
+       "      <td>36.090750</td>\n",
        "      <td>...</td>\n",
        "      <td>670</td>\n",
        "      <td>Paradise, NV</td>\n",
@@ -998,10 +996,10 @@
        "      <td>NaN</td>\n",
        "      <td>outdoor</td>\n",
        "      <td>Werner-Heisenberg-Allee 25, 80939 München, Ger...</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>moderate</td>\n",
        "      <td>75,024</td>\n",
        "      <td>Grass</td>\n",
+       "      <td>48.218800</td>\n",
        "      <td>...</td>\n",
        "      <td>492</td>\n",
        "      <td>NaN</td>\n",
@@ -1022,10 +1020,10 @@
        "      <td>NaN</td>\n",
        "      <td>outdoor</td>\n",
        "      <td>1 Everbank Field Dr, Jacksonville, FL 32202</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>warm</td>\n",
        "      <td>67,814</td>\n",
        "      <td>Grass</td>\n",
+       "      <td>30.323889</td>\n",
        "      <td>...</td>\n",
        "      <td>6</td>\n",
        "      <td>NaN</td>\n",
@@ -1070,10 +1068,10 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>285 Dodge Street, Buffalo, NY 14208</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>cold</td>\n",
        "      <td>49,206</td>\n",
        "      <td>Grass</td>\n",
+       "      <td>42.905650</td>\n",
        "      <td>...</td>\n",
        "      <td>200</td>\n",
        "      <td>NaN</td>\n",
@@ -1094,10 +1092,10 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Wembley, London HA9 0WS, United Kingdom</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>moderate</td>\n",
        "      <td>90,000</td>\n",
        "      <td>Grass</td>\n",
+       "      <td>51.555833</td>\n",
        "      <td>...</td>\n",
        "      <td>62</td>\n",
        "      <td>NaN</td>\n",
@@ -1118,10 +1116,10 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1060 West Addison Street, Chicago, IL 60613</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>cold</td>\n",
        "      <td>41,649</td>\n",
        "      <td>Grass</td>\n",
+       "      <td>41.947460</td>\n",
        "      <td>...</td>\n",
        "      <td>183</td>\n",
        "      <td>NaN</td>\n",
@@ -1142,10 +1140,10 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>276 Derby Ave, West Haven, CT 06516</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>cold</td>\n",
        "      <td>64,246</td>\n",
        "      <td>Grass</td>\n",
+       "      <td>41.309710</td>\n",
        "      <td>...</td>\n",
        "      <td>13</td>\n",
        "      <td>NaN</td>\n",
@@ -1166,10 +1164,10 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1 E 161 St, Bronx, NY 10451</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>cold</td>\n",
        "      <td>54,251</td>\n",
        "      <td>Grass</td>\n",
+       "      <td>40.829580</td>\n",
        "      <td>...</td>\n",
        "      <td>7</td>\n",
        "      <td>NaN</td>\n",
@@ -1184,7 +1182,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>132 rows × 25 columns</p>\n",
+       "<p>132 rows × 22 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1216,66 +1214,66 @@
        "130            NaN                276 Derby Ave, West Haven, CT 06516   \n",
        "131            NaN                        1 E 161 St, Bronx, NY 10451   \n",
        "\n",
-       "      Weather Station Zipcode   Climate Stadium Capacity Field Surface Type  \\\n",
-       "Index                                                                         \n",
-       "0                       15212      cold           65,500              Grass   \n",
-       "1                       78203    indoor            72000          FieldTurf   \n",
-       "2                         NaN    indoor            65000              Grass   \n",
-       "3                         NaN  moderate           75,024              Grass   \n",
-       "4                         NaN      warm           67,814              Grass   \n",
-       "...                       ...       ...              ...                ...   \n",
-       "127                       NaN      cold           49,206              Grass   \n",
-       "128                       NaN  moderate           90,000              Grass   \n",
-       "129                       NaN      cold           41,649              Grass   \n",
-       "130                       NaN      cold           64,246              Grass   \n",
-       "131                       NaN      cold           54,251              Grass   \n",
+       "        Climate Stadium Capacity Field Surface Type   Latitude  ...  \\\n",
+       "Index                                                           ...   \n",
+       "0          cold           65,500              Grass  40.484600  ...   \n",
+       "1        indoor            72000          FieldTurf  29.416944  ...   \n",
+       "2        indoor            65000              Grass  36.090750  ...   \n",
+       "3      moderate           75,024              Grass  48.218800  ...   \n",
+       "4          warm           67,814              Grass  30.323889  ...   \n",
+       "...         ...              ...                ...        ...  ...   \n",
+       "127        cold           49,206              Grass  42.905650  ...   \n",
+       "128    moderate           90,000              Grass  51.555833  ...   \n",
+       "129        cold           41,649              Grass  41.947460  ...   \n",
+       "130        cold           64,246              Grass  41.309710  ...   \n",
+       "131        cold           54,251              Grass  40.829580  ...   \n",
        "\n",
-       "       ... Elevation (ft) Stadium Location2            Team Name  \\\n",
-       "Index  ...                                                         \n",
-       "0      ...            367    Pittsburgh, PA  Pittsburgh Steelers   \n",
-       "1      ...            202               NaN                  NaN   \n",
-       "2      ...            670      Paradise, NV    Las Vegas Raiders   \n",
-       "3      ...            492               NaN                  NaN   \n",
-       "4      ...              6               NaN                  NaN   \n",
-       "...    ...            ...               ...                  ...   \n",
-       "127    ...            200               NaN                  NaN   \n",
-       "128    ...             62               NaN                  NaN   \n",
-       "129    ...            183               NaN                  NaN   \n",
-       "130    ...             13               NaN                  NaN   \n",
-       "131    ...              7               NaN                  NaN   \n",
+       "       Elevation (ft)  Stadium Location2            Team Name Team Short Name  \\\n",
+       "Index                                                                           \n",
+       "0                 367     Pittsburgh, PA  Pittsburgh Steelers        Steelers   \n",
+       "1                 202                NaN                  NaN             NaN   \n",
+       "2                 670       Paradise, NV    Las Vegas Raiders         Raiders   \n",
+       "3                 492                NaN                  NaN             NaN   \n",
+       "4                   6                NaN                  NaN             NaN   \n",
+       "...               ...                ...                  ...             ...   \n",
+       "127               200                NaN                  NaN             NaN   \n",
+       "128                62                NaN                  NaN             NaN   \n",
+       "129               183                NaN                  NaN             NaN   \n",
+       "130                13                NaN                  NaN             NaN   \n",
+       "131                 7                NaN                  NaN             NaN   \n",
        "\n",
-       "       Team Short Name  Team ID  Preferred ID Conference (post 2002)  \\\n",
-       "Index                                                                  \n",
-       "0             Steelers      PIT           PIT                    AFC   \n",
-       "1                  NaN      NaN           NaN                    NaN   \n",
-       "2              Raiders      LVR           RAI                    AFC   \n",
-       "3                  NaN      NaN           NaN                    NaN   \n",
-       "4                  NaN      NaN           NaN                    NaN   \n",
-       "...                ...      ...           ...                    ...   \n",
-       "127                NaN      NaN           NaN                    NaN   \n",
-       "128                NaN      NaN           NaN                    NaN   \n",
-       "129                NaN      NaN           NaN                    NaN   \n",
-       "130                NaN      NaN           NaN                    NaN   \n",
-       "131                NaN      NaN           NaN                    NaN   \n",
+       "      Team ID Preferred ID Conference (post 2002) Division (post 2002)  \\\n",
+       "Index                                                                    \n",
+       "0         PIT          PIT                    AFC            AFC North   \n",
+       "1         NaN          NaN                    NaN                  NaN   \n",
+       "2         LVR          RAI                    AFC                  NaN   \n",
+       "3         NaN          NaN                    NaN                  NaN   \n",
+       "4         NaN          NaN                    NaN                  NaN   \n",
+       "...       ...          ...                    ...                  ...   \n",
+       "127       NaN          NaN                    NaN                  NaN   \n",
+       "128       NaN          NaN                    NaN                  NaN   \n",
+       "129       NaN          NaN                    NaN                  NaN   \n",
+       "130       NaN          NaN                    NaN                  NaN   \n",
+       "131       NaN          NaN                    NaN                  NaN   \n",
        "\n",
-       "      Division (post 2002) Divison (pre 2002) Divison (pre 2002).1  \n",
-       "Index                                                               \n",
-       "0                AFC North                AFC          AFC Central  \n",
-       "1                      NaN                NaN                  NaN  \n",
-       "2                      NaN                AFC             AFC West  \n",
-       "3                      NaN                NaN                  NaN  \n",
-       "4                      NaN                NaN                  NaN  \n",
-       "...                    ...                ...                  ...  \n",
-       "127                    NaN                NaN                  NaN  \n",
-       "128                    NaN                NaN                  NaN  \n",
-       "129                    NaN                NaN                  NaN  \n",
-       "130                    NaN                NaN                  NaN  \n",
-       "131                    NaN                NaN                  NaN  \n",
+       "      Divison (pre 2002) Divison (pre 2002).1  \n",
+       "Index                                          \n",
+       "0                    AFC          AFC Central  \n",
+       "1                    NaN                  NaN  \n",
+       "2                    AFC             AFC West  \n",
+       "3                    NaN                  NaN  \n",
+       "4                    NaN                  NaN  \n",
+       "...                  ...                  ...  \n",
+       "127                  NaN                  NaN  \n",
+       "128                  NaN                  NaN  \n",
+       "129                  NaN                  NaN  \n",
+       "130                  NaN                  NaN  \n",
+       "131                  NaN                  NaN  \n",
        "\n",
-       "[132 rows x 25 columns]"
+       "[132 rows x 22 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1286,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "9586d19f",
    "metadata": {},
    "outputs": [],
