--- a/NFL Betting Analysis/betting_analysis.ipynb
+++ b/NFL Betting Analysis/betting_analysis.ipynb
@@ -1835,7 +1835,9 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "36dac0b6",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1886,11 +1888,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "200f07a5",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 138 entries, 0 to 137\n",
+      "Data columns (total 23 columns):\n",
+      " #   Column                  Non-Null Count  Dtype   \n",
+      "---  ------                  --------------  -----   \n",
+      " 0   Stadium Name            126 non-null    object  \n",
+      " 1   Stadium Location        125 non-null    object  \n",
+      " 2   Year Opened             96 non-null     float64 \n",
+      " 3   Year Closed             43 non-null     float64 \n",
+      " 4   Stadium Type            126 non-null    object  \n",
+      " 5   Address                 132 non-null    object  \n",
+      " 6   Climate                 132 non-null    object  \n",
+      " 7   Stadium Capacity        138 non-null    int64   \n",
+      " 8   Field Surface Type      132 non-null    object  \n",
+      " 9   Latitude                132 non-null    float64 \n",
+      " 10  Longitude               132 non-null    float64 \n",
+      " 11  Dome Angle              65 non-null     float64 \n",
+      " 12  Elevation (ft)          132 non-null    float64 \n",
+      " 13  Stadium Location2       44 non-null     object  \n",
+      " 14  Team Name               44 non-null     object  \n",
+      " 15  Team Short Name         44 non-null     object  \n",
+      " 16  Team ID                 44 non-null     object  \n",
+      " 17  Preferred ID            44 non-null     object  \n",
+      " 18  Conference (post 2002)  44 non-null     object  \n",
+      " 19  Division (post 2002)    35 non-null     object  \n",
+      " 20  Divison (pre 2002)      44 non-null     object  \n",
+      " 21  Divison (pre 2002).1    42 non-null     object  \n",
+      " 22  Stadium Capacity Range  138 non-null    category\n",
+      "dtypes: category(1), float64(6), int64(1), object(15)\n",
+      "memory usage: 25.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "renamed_team_stadium_merged.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "cd9fa211",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 138 entries, 0 to 137\n",
+      "Data columns (total 24 columns):\n",
+      " #   Column                  Non-Null Count  Dtype   \n",
+      "---  ------                  --------------  -----   \n",
+      " 0   Stadium Name            0 non-null      float64 \n",
+      " 1   Stadium Location        125 non-null    object  \n",
+      " 2   Year Opened             96 non-null     float64 \n",
+      " 3   Year Closed             43 non-null     float64 \n",
+      " 4   Stadium Type            126 non-null    object  \n",
+      " 5   Address                 132 non-null    object  \n",
+      " 6   Climate                 132 non-null    object  \n",
+      " 7   Stadium Capacity        138 non-null    int64   \n",
+      " 8   Field Surface Type      132 non-null    object  \n",
+      " 9   Latitude                132 non-null    float64 \n",
+      " 10  Longitude               132 non-null    float64 \n",
+      " 11  Dome Angle              65 non-null     float64 \n",
+      " 12  Elevation (ft)          132 non-null    float64 \n",
+      " 13  Stadium Location2       44 non-null     object  \n",
+      " 14  Team Name               44 non-null     category\n",
+      " 15  Team Short Name         44 non-null     object  \n",
+      " 16  Team ID                 44 non-null     object  \n",
+      " 17  Preferred ID            44 non-null     object  \n",
+      " 18  Conference (post 2002)  44 non-null     object  \n",
+      " 19  Division (post 2002)    35 non-null     object  \n",
+      " 20  Divison (pre 2002)      44 non-null     object  \n",
+      " 21  Divison (pre 2002).1    42 non-null     object  \n",
+      " 22  Stadium Capacity Range  138 non-null    category\n",
+      " 23  Numeric Stadium Name    0 non-null      float64 \n",
+      "dtypes: category(2), float64(8), int64(1), object(13)\n",
+      "memory usage: 26.7+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "#convert \"Stadium Name\" column to numeric type\n",
+    "renamed_team_stadium_merged['Stadium Name'] = pd.to_numeric(renamed_team_stadium_merged['Stadium Name'], errors='coerce')\n",
+    "\n",
+    "#convert team name to categorical type\n",
+    "renamed_team_stadium_merged['Team Name'] = renamed_team_stadium_merged['Team Name'].astype(\"category\")\n",
+    "\n",
+    "\n",
+    "renamed_team_stadium_merged.info()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "272f8ce2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Configure the map plot\n",
+    "cities_map_plot = city_data_df.hvplot.points(\n",
+    "    \"Lng\",\n",
+    "    \"Lat\",\n",
+    "    geo = True,\n",
+    "    tiles = \"OSM\",\n",
+    "    frame_width = 700,\n",
+    "    frame_height = 500,\n",
+    "    size = \"Humidity\",\n",
+    "    color = \"City\",\n",
+    "    alpha = 0.5\n",
+    ")\n",
+    "# Display the map\n",
+    "cities_map_plot"
+   ]
   }
  ],
  "metadata": {
